--- a/_output.yml
+++ b/_output.yml
@@ -1,18 +1,11 @@
-bookdown::gitbook:
-  css: style.css
+bookdown::bs4_book:
+  template: template.html
+  css: assets/style.css
   config:
     toc:
       before: |
-        <li><a href="./">A Minimal Book Example</a></li>
+        <li class="toc-logo"><a href="./"><img src="images/logos/pathvisio-book-logo.png"></a></li>
       after: |
         <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
     edit: https://github.com/rstudio/bookdown-demo/edit/master/%s
-    download: ["pdf", "epub"]
-bookdown::pdf_book:
-  includes:
-    in_header: preamble.tex
-  latex_engine: xelatex
-  citation_package: natbib
-  keep_tex: yes
-bookdown::epub_book: default
-bookdown::bs4_book: default
+    download: ["rmd"]
