--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -21,6 +21,7 @@ rmd_files:
     "pathway-model-components.Rmd",
     "pathway-elements.Rmd",
     "datanodes.Rmd",
+    "aliases.Rmd",
     "states.Rmd",
     "interactions.Rmd",
     "graphical-lines.Rmd",
@@ -32,7 +33,10 @@ rmd_files:
     "why-add-info.Rmd",
     "pathway-meta-info.Rmd",
     "pathway-element-info.Rmd",
-    "reference-information.Rmd",
+    "properties.Rmd",
+    "annotations.Rmd",
+    "citations.Rmd",
+    "evidences.Rmd",
 
     "styles.Rmd",
     "make-it-pretty.Rmd",
