--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -32,8 +32,8 @@ rmd_files:
     "pathway-model-info.Rmd",
     "why-add-info.Rmd",
     "pathway-meta-info.Rmd",
-    "pathway-element-info.Rmd",
     "properties.Rmd",
+    "load-identifier-mapping.Rmd",
     "annotations.Rmd",
     "citations.Rmd",
     "evidences.Rmd",
