--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -13,9 +13,9 @@ rmd_files:
     "getting-started.Rmd",
     "installation.Rmd",
     "pathway-basics.Rmd",
-    "drawing-pathway.Rmd",
-    "saving-pathway.Rmd",
-    "sharing-pathway.Rmd",
+    "drawing-a-pathway-model.Rmd",
+    "saving-a-pathway-model.Rmd",
+    "sharing-a-pathway-model.Rmd",
     "tutorials.Rmd",
 
     "pathway-model-components.Rmd",
@@ -29,9 +29,9 @@ rmd_files:
     "shapes.Rmd",
     "groups.Rmd",
 
-    "pathway-model-info.Rmd",
-    "why-add-info.Rmd",
-    "pathway-meta-info.Rmd",
+    "pathway-model-information.Rmd",
+    "why-add-information.Rmd",
+    "pathway-meta-information.Rmd",
     "properties.Rmd",
     "load-identifier-mapping-database.Rmd",
     "annotations.Rmd",
