--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,9 +1,7 @@
 book_filename: "PathVisio Book"
 language:
   ui:
-    chapter_name: "Chapter "
-delete_merged_file: true
-output_dir: "docs" 
+    chapter_name: ""
 new_session: yes
 rmd_files:
   [
