--- a/.github/workflows/bookdown.yml
+++ b/.github/workflows/bookdown.yml
@@ -27,10 +27,11 @@ jobs:
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
           extra-packages: any::XML
+          
+      - name: Install some Dependencies 
+        run: Rscript -e 'install.packages("downlit", "xml2)'
 
       - name: Build site
-        run: Rscript -e 'install.packages("downlit")'
-        run: Rscript -e 'install.packages("xml2")'
         run: Rscript -e 'bookdown::render_book("index.Rmd", quiet = TRUE)'
 
       - name: Deploy to Netlify
