--- a/_output.yml
+++ b/_output.yml
@@ -1,4 +1,5 @@
 bookdown::bs4_book:
+  repo: https://github.com/Finterly/pathvisio-book/
   template: template.html
   css: assets/style.css
   config:
@@ -9,3 +10,8 @@ bookdown::bs4_book:
         <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
     edit: https://github.com/rstudio/bookdown-demo/edit/master/%s
     download: ["rmd"]
+    
+bookdown::bs4_book:
+
+  includes:
+    in_header: _includes/analytics.html
