--- a/.github/workflows/bookdown.yml
+++ b/.github/workflows/bookdown.yml
@@ -28,8 +28,8 @@ jobs:
         with:
           extra-packages: any::XML
           
-      - name: Install rmarkdown, bookdown
-        run: Rscript -e 'install.packages(c("downlit","xml2"))'
+      - name: Install downlit, xml2, emojifont
+        run: Rscript -e 'install.packages(c("downlit","xml2","emojifont"))'
         
       - name: Build site
         run: Rscript -e 'bookdown::render_book("index.Rmd", quiet = TRUE)'
