--- a/.github/workflows/render_bookdown.yml
+++ b/.github/workflows/render_bookdown.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Render Book
         run: |
-          Rscript -e Rscript -e 'install.packages(c("downlit","xml2","emojifont"))'
+          Rscript -e 'install.packages(c("downlit","xml2","emojifont"))'
           Rscript -e 'bookdown::render_book("index.Rmd")'
           cp -fvr _redirects _book/
           cp -fvr .htaccess _book/
